@@ -22,19 +22,19 @@ a {color: #0044B3;}
 a:visited {color: #597BB3;}
 a.nonexistent, a.badinterwiki {color: gray;}
 
-a.www:before {content: url(../img/moin-www.png);}
-a.http:before {content: url(../img/moin-www.png);}
-a.https:before {content: url(../img/moin-www.png);}
-a.file:before {content: url(../img/moin-ftp.png);}
-a.ftp:before {content: url(../img/moin-ftp.png);}
-a.nntp:before {content: url(../img/moin-news.png);}
-a.news:before {content: url(../img/moin-news.png);}
-a.telnet:before {content: url(../img/moin-telnet.png);}
-a.irc:before {content: url(../img/moin-telnet.png);}
-a.mailto:before {content: url(../img/moin-email.png);}
-a.attachment:before {content: url(../img/moin-attach.png);}
-a.badinterwiki:before {content: url(../img/moin-inter.png);}
-a.interwiki:before {content: url(../img/moin-inter.png);}
+a.www:before {content: url(../img/moin-www.png); margin: 0 0.2em;}
+a.http:before {content: url(../img/moin-www.png); margin: 0 0.2em;}
+a.https:before {content: url(../img/moin-www.png); margin: 0 0.2em;}
+a.file:before {content: url(../img/moin-ftp.png); margin: 0 0.2em;}
+a.ftp:before {content: url(../img/moin-ftp.png); margin: 0 0.2em;}
+a.nntp:before {content: url(../img/moin-news.png); margin: 0 0.2em;}
+a.news:before {content: url(../img/moin-news.png); margin: 0 0.2em;}
+a.telnet:before {content: url(../img/moin-telnet.png); margin: 0 0.2em;}
+a.irc:before {content: url(../img/moin-telnet.png); margin: 0 0.2em;}
+a.mailto:before {content: url(../img/moin-email.png); margin: 0 0.2em;}
+a.attachment:before {content: url(../img/moin-attach.png); margin: 0 0.2em;}
+a.badinterwiki:before {content: url(../img/moin-inter.png); margin: 0 0.2em;}
+a.interwiki:before {content: url(../img/moin-inter.png); margin: 0 0.2em;}
 
 /*
 This could maybe avoid screen jumping in IE with IE7 hack.
