@@ -15,6 +15,7 @@ Version 1.5.0current:
     * When checking for email uniqueness, do not compare with disabled user
       profiles.
     * Fix sending of HTTP headers for Despam action.
+    * Add some margin left and right of the link icons.
 
   Other changes:
     * Made it easier for auth methods needing a user interface (like ldap or
